--- a/compile-kernel/tools/config/config-6.1
+++ b/compile-kernel/tools/config/config-6.1
@@ -3812,7 +3812,7 @@ CONFIG_SPI_MUX=m
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 CONFIG_SPI_LOOPBACK_TEST=m
 CONFIG_SPI_TLE62X0=m
 # CONFIG_SPI_SLAVE is not set
