--- a/compile-kernel/tools/config/config-6.1
+++ b/compile-kernel/tools/config/config-6.1
@@ -7243,8 +7243,7 @@ CONFIG_VIDEO_SUNXI_CEDRUS=m
 # CONFIG_STAGING_MEDIA_DEPRECATED is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
-CONFIG_FB_TFT=y
-CONFIG_FB_TFT_ST7789V=y
+# CONFIG_FB_TFT is not set
 # CONFIG_KS7010 is not set
 CONFIG_PI433=m
 # CONFIG_XIL_AXIS_FIFO is not set
